--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 
-title: __SITE_NAME__
-description: __DESCRIPTION__
-url: __URL__
-basedomain: __BASEDOMAIN__
+title: Fashionable Wedding Dress
+description: A good wedding, do not need a lot of complex design,a cost-effective and comfortable dress is enough
+url: zhongshuijiao.github.io
+basedomain: hectodress.com
 
 
 #####################
